--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-JWTSECRET=jwtsecret
+JWTSECRET = jwtsecret
+DATABASE_URL = postmates
+DATABASE_URL_TEST = postmates-test
+FRONTEND_URL = http://localhost:3000
