--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postmates-server",
+  "name": "serever-template",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
